--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "types": "tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.55.0",
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.1.0",
     "eslint-plugin-import": "^2.32.0",
