--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -18,4 +18,4 @@ jobs:
           node-version: 20
           cache: 'npm'
       - run: npm ci
-      - run: npm run check
+      - run: npm run types
